build-aws-platform-using-crossplane/test/infra.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: dev-private
spec:
  forProvider:
    region: us-east-2
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: dev-nat
    routeTableIdRef:
      name: dev-private
  providerConfigRef:
    name: default
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: dev-public
spec:
  forProvider:
    region: us-east-2
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: dev-igw
    routeTableIdRef:
      name: dev-public
  providerConfigRef:
    name: default

# ---------------------- Route Table Associations ----------------------
